--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.3",
+    "@supabase/supabase-js": "^2.49.4",
     "@types/axios": "^0.14.0",
     "@types/cheerio": "^0.22.35",
     "axios": "^1.7.7",
@@ -19,10 +21,11 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.453.0",
-    "next": "15.2.4",
+    "next": "15.3.2",
     "puppeteer": "^23.6.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "resend": "^4.5.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
