--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@types/cheerio": "^0.22.35",
     "axios": "^1.7.7",
     "cheerio": "^1.0.0",
+    "chrome-aws-lambda": "10.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.453.0",
     "next": "15.3.2",
     "puppeteer": "^23.6.0",
+    "puppeteer-core": "24.8.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "resend": "^4.5.1",
