--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "15.3.2",
     "puppeteer": "^23.6.0",
     "puppeteer-core": "24.8.2",
+    "razorpay": "^2.9.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "resend": "^4.5.1",
