--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/supabase-adapter": "^1.9.1",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
@@ -23,6 +25,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.453.0",
     "next": "15.3.2",
+    "next-auth": "^4.24.11",
     "puppeteer": "^23.6.0",
     "puppeteer-core": "24.8.2",
     "razorpay": "^2.9.6",
