--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:ci": "jest --ci --coverage --watchAll=false"
   },
   "dependencies": {
     "@auth/supabase-adapter": "^1.9.1",
@@ -17,14 +21,21 @@
     "@radix-ui/react-tooltip": "^1.1.3",
     "@supabase/supabase-js": "^2.49.4",
     "@types/axios": "^0.14.0",
+    "@types/bcryptjs": "^3.0.0",
     "@types/cheerio": "^0.22.35",
+    "@types/jsonwebtoken": "^9.0.10",
     "axios": "^1.7.7",
+    "bcryptjs": "^3.0.2",
     "cheerio": "^1.0.0",
     "chrome-aws-lambda": "10.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
+    "express-rate-limit": "^8.0.0",
+    "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.453.0",
-    "next": "15.3.2",
+    "next": "15.3.3",
     "next-auth": "^4.24.11",
     "puppeteer": "^23.6.0",
     "puppeteer-core": "24.8.2",
@@ -33,17 +44,25 @@
     "react-dom": "^19.1.0",
     "resend": "^4.5.1",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^4.0.5"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20.16.12",
     "@types/puppeteer": "^5.4.7",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
+    "jest": "^30.0.4",
+    "jest-environment-jsdom": "^30.0.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "ts-jest": "^29.4.0",
     "typescript": "^5.6.3"
   }
 }
