--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.3",
-    "@supabase/supabase-js": "^2.49.4",
+    "@supabase/supabase-js": "^2.52.1",
     "@types/axios": "^0.14.0",
     "@types/bcryptjs": "^3.0.0",
     "@types/cheerio": "^0.22.35",
@@ -32,6 +32,7 @@
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "critters": "^0.0.25",
+    "dotenv": "^17.2.1",
     "express-rate-limit": "^8.0.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
