feat: Implement admin dashboard components and authentication system
- Added AdminHeader component for the admin dashboard with notifications and user menu.
- Created AdminLayout component to structure the admin pages with sidebar and header.
- Developed AdminSidebar component for navigation with role-based access.
- Introduced alert dialog and dropdown menu components for UI interactions.
- Implemented input, label, switch, and textarea components for form handling.
- Established admin authentication and authorization logic with Supabase.
- Created database schema for admin roles, activity logs, and system settings.
- Added SQL migration scripts to set up the necessary database tables and initial data.

--- a/.env
+++ b/.env
@@ -32,3 +32,11 @@ NEXT_PUBLIC_API_BASE_URL=https://tender-data.vercel.app
 VERCEL_URL=https://tender-data.vercel.app
 # Cron job timing (for reference)
 # CRON_SCHEDULE=0 * * * * (every hour)
+
+
+# Admin Configuration
+ADMIN_SECRET_KEY=your-admin-secret-key-here
+SUPER_ADMIN_EMAIL=admin@tendernotify.site
+
+# Additional security
+ADMIN_SESSION_TIMEOUT=86400000  # 24 hours in milliseconds
