--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
   },
   "dependencies": {
     "@auth/supabase-adapter": "^1.9.1",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@supabase/supabase-js": "^2.52.1",
@@ -28,7 +32,7 @@
     "bcryptjs": "^3.0.2",
     "cheerio": "^1.0.0",
     "chrome-aws-lambda": "10.1.0",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "critters": "^0.0.25",
